# rs-signuis

./: .gitignore  Cargo.toml
app/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  package-lock.json
app/src/: app.rs  client.rs  error.rs  lib.rs  main.rs  server.rs
app/src/actions/: auth.rs  mod.rs
app/src/api/: reporting.rs
app/src/app/: mod.rs
app/src/app/pages/: home.rs  mod.rs  not_found.rs
app/src/middleware/: mod.rs  session.rs
app/src/pages/: auth.rs  home.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/migrations/: 20231212082550_authentication.down.sql  20231212082550_authentication.up.sql  20231212084242_nuisance.down.sql  20231212084242_nuisance.up.sql  20231212085152_report.down.sql  20231212085152_report.up.sql  20231223151308_logs.down.sql  20231223151308_logs.up.sql
core/src/: config.rs  crypto.rs  error.rs  futures.rs  issues.rs  lib.rs  schema.rs  signals.rs  utils.rs  validation.rs
core/src/drivers/: mod.rs  querier.rs
core/src/entities/: client.rs  credentials.rs  log.rs  nuisance.rs
core/src/events/: authentication_failed.rs  mod.rs  user_registered.rs
core/src/fixtures/: clients.rs  geojson.rs  logs.rs  mod.rs  nuisance_families.rs  nuisance_reports.rs  nuisance_types.rs  rel.rs  sessions.rs  users.rs
core/src/forms/: account.rs  authentication.rs  mod.rs  reporting.rs
core/src/gis/: entity.rs  ewkb.rs  mod.rs
core/src/model/: auth.rs  client.rs  credentials.rs  log.rs  mod.rs  report.rs  session.rs  user.rs
core/src/models/: client.rs  credential.rs  credentials.rs  mod.rs  nuisance.rs  nuisance_family.rs  nuisance_report.rs  nuisance_type.rs  session.rs  user.rs  user_session.rs
core/src/repositories/: credential.rs  credentials.rs  logs.rs  mod.rs  nuisance_families.rs  nuisance_family.rs  nuisance_report.rs  nuisance_reports.rs  nuisance_type.rs  nuisance_types.rs  sessions.rs  user.rs  user_session.rs  users.rs
core/src/sea_gis/: entity.rs  ewkb.rs  functions.rs  spatialite.rs
core/src/services/: account.rs  authentication.rs  authorization.rs  database.rs  logger.rs  mod.rs  reporting.rs
core/src/sql/: mod.rs
core/src/types/: datetime.rs  geojson.rs  mod.rs  node.rs  uuid.rs
core/tests/: authenticate_with_credentials.rs  authentication_test.rs  check_session_token.rs  create_nuisance_family.rs  create_nuisance_type.rs  register_user.rs  report_nuisance.rs
core/tests/fixtures/: clients.rs  mod.rs  rel.rs  sessions.rs  users.rs
core/tests/setup/: mod.rs
grpc/: Cargo.toml  build.rs
grpc/src/: codegen.rs  error.rs  middlewares.rs  server.rs
grpc/src/services/: authentication.rs  mod.rs  reporting.rs
migrations/: 20231212082550_authentication.down.sql  20231212082550_authentication.up.sql  20231212084242_nuisance.down.sql  20231212084242_nuisance.up.sql  20231212085152_report.down.sql  20231212085152_report.up.sql
node/: Cargo.toml  build.rs  index.d.ts  package.json
node/src/: lib.rs
proto/: signuis.proto
