[package]
name = "signuis-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "signuis-app-client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "signuis-app-server"
path = "src/server.rs"
required-features = ["server"]

[dependencies]
log = "0.4.20"
yew = "0.21.0"
yew-router = "0.18.0"

axum = {version = "0.7.3", optional = true}
hyper = {version = "1.1.0", optional = true}
tower = {version = "0.4.13", optional = true}
tokio = {version = "1.35.1", optional = true, features = ["full"]}
include_dir = {version = "0.7.3", optional = true}
mime_guess = {version = "2.0.4", optional = true}
tower-http = {version = "0.5.0", optional = true}
futures = "0.3.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[features]
client = ["yew/hydration"]
server = ["yew/ssr", "dep:tokio", "dep:axum", "dep:hyper", "dep:tower", "dep:tower-http", "dep:include_dir", "dep:mime_guess"]
