[package]
name = "signuis-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
tokio = {version = "1.35.0", features = ["full"]}
signuis-core = { path = "../core" }
futures = "0.3.30"
rand = "0.8.5"
