[package]
name = "signuis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
async-stream = "0.3.5"
async-trait = "0.1.74"
base64 = "0.21.5"
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.29"
log = "0.4.20"
log4rs = "1.2.0"
password-hash = "0.5.0"
rand = "0.8.5"
sea-query = { version = "0.30.4", features = [] }
sea-query-binder = { version = "0.5.0", features = ["sqlx", "sqlx-postgres"] }
sea-query-postgres = "0.4.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
time = "0.3.30"
tokio = { version = "1.35.0", features = ["test-util", "rt", "macros"] }
