[package]
name = "signuis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
fake = { version = "2.9.2" }

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dependencies]
fake = { version = "2.9.2", optional = true }
argon2 = { version = "0.5.2", optional = true }
base64 = "0.22.1"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = { version = "0.15.0", optional = true }
log = "0.4.20"
password-hash = { version = "0.5.0", optional = true }
rand = { version = "0.8.5", optional = true }
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-tokio",
  "uuid",
  "chrono",
], optional = true }
futures = { version = "0.3.30", optional = true }
sqlx-postgres = { version = "0.7.3", optional = true }
tokio = { version = "1.35.0", features = [
  "test-util",
  "rt",
  "macros",
], optional = true }
email_address = "0.2.4"
serde_json = "^1.0.108"
serde = "1.0.194"
sql-gis = { git = "https://github.com/gpabois/sql-gis.git", default-features = false, optional = true }
actix = { version = "0.13.5", optional = true }
paste = "1.0.15"
itertools = "0.13.0"

[features]
default = ["backend"]
sqlx = []
repository = ["sqlx"]
backend = [
  "repository",
  "password-hash",
  "dep:sqlx",
  "dep:sqlx-postgres",
  "tokio",
  "futures",
  "actix",
  "sql-gis/postgis",
  "sql-gis/geojson",
  "rand",
  "argon2",
  "dotenv",
]
frontend = ["sql-gis/geojson"]
fixture = ["fake"]
