[package]
name = "signuis-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name="signuis-grpc-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "signuis-grpc-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.10.2"

[dependencies]
tonic = "0.10.2"

