[package]
name = "signuis-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name="signuis-grpc-server"
path = "src/server.rs"

[lib] # Bin to run the HelloWorld gRPC client
name = "signuis_grpc_client"
path = "src/client.rs"
target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.10.2"

[dependencies]
tonic = "0.10.2"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
signuis-core = {path = "../core"}
tower = "0.4.13"
hyper = "1.1.0"
tonic-reflection = "0.10.2"
