[package]
name = "node-signuis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signuis-core = {path = "../core"}
node-bindgen = { version = "6.0" }
tslink = "0.1.0"
futures = "0.3.30"
once_cell = "1.19.0"

[build-dependencies]
node-bindgen = { version = "6.0", default-features = false, features = ["build"] }

[lib]
crate-type = ["cdylib"]
